# RDK-X5-CEIV-Net-Robot

./: README.md  run_system.py  test_audio.py  test_face.py  test_hand.py  test_vision_only.py
Vision_Subsystem/: CMakeLists.txt  main.cpp
Vision_Subsystem/include/: face_engine.h  hand_engine.h
Vision_Subsystem/src/: face_engine.cpp  hand_engine.cpp
Voice_Subsystem/code/audio/: live.flac
